kubernetes/infrastructure/cilium/manifests/error-pages-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: error-pages-service
  namespace: kube-system
spec:
  selector:
    app: error-pages
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
