kubernetes/infrastructure/cilium/manifests/default-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-prod-clusterissuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
      port: 80
    - name: https-root
      hostname: "nieradko.com"
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: root-homelab-cert-tls
    - name: https
      hostname: "*.nieradko.com"
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-homelab-cert-tls
